Updated links in the signup form

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,7 +11,7 @@
         <a href="#about">About</a>
         <a href="#contact">Political Parties</a>
         <a href="#contact">Downloads</a>
-        <a href="">Login</a>
+        <a href="login.html">Login</a>
         <a href="#contact">signup</a>
         
         
