--- a/UI/login.html
+++ b/UI/login.html
@@ -45,6 +45,7 @@
             </div>
             <div class="already">
                 <p>Don't have an account?</p><a style="color:green" href="signup.html">Sign up here</a>
+                <p>Forgot Password</p><a style="color:green" href="forgotpass.html">Reset Password</a>
 
             </div>
 
