--- a/UI/login.html
+++ b/UI/login.html
@@ -12,8 +12,8 @@
         <a href="#about">About</a>
         <a href="#contact">Political Parties</a>
         <a href="#contact">Downloads</a>
-        <a href="">Login</a>
-        <a href="#contact">signup</a>
+        <a href="#">Login</a>
+        <a href="signup.html">signup</a>
         
         
       </div>
